hackmd/hackmd/deployment.yaml
##---
# Source: hackmd/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackmd
  labels:
    app: hackmd
    chart: hackmd-0.1.1
    release: hmd0
    heritage: Tiller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackmd
      release: hmd0
  template:
    metadata:
      labels:
        app: hackmd
        release: hmd0
    spec:
      containers:
        - name: hackmd
          image: hackmdio/hackmd:2.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status
              port: 3000
            initialDelaySeconds: 120
          readinessProbe:
            httpGet:
              path: /status
              port: 3000
            initialDelaySeconds: 30
          volumeMounts:
            - name: data
              mountPath: "/home/hackmd/app/public/uploads"
          resources:
            {}

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: codimd
